<resources>
    <string name="app_name">Taskman</string>
    <string name="tasks_name">Task Name</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="to_do">To Do</string>
    <string name="create_new_task">Create New Task</string>
    <string name="you_can_create_new_task_in_here">You can create new task in here.</string>
    <string name="create_new_task_icon">+</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="save">Save</string>
    <string name="empty_not_saved">Task not saved because it is empty</string>
</resources>
